# QUACQ

./: .gitignore  README  README.md  pyproject.toml
notebooks/: example.ipynb  example_human.ipynb  example_zebra.ipynb
src/QUACQ/: acquisition.py  cli.py  core.py
src/benchmarks/: jigsaw.py  murder.py  rflap.py  zebra.py
src/cli/: learn.py
src/quacq/: acquisition.py  core.py
src/utils/: logger.py
tests/: test_acquisition.py  test_convergence.py  test_core.py
